<resources>
    <string name="app_name">NCU Learning Chinese Progress</string>
    <string name="title_activity__vocabulary">Activity_Vocabulary</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="Profile">Profile</string>
    <string name="Practice">Practice</string>
    <string name="Test">Test</string>
    <string name="CreatNewWord">Create word</string>
    <string name="Animal">Animal</string>
    <string name="Transport">Transport</string>
    <string name="Gretting">Gretting</string>
    <string name="People">People</string>
    <string name="Fruit">Fruit</string>


    <string name="get_local_img">取得照片</string>
    <string name="do_nothing">無權限無法做事!</string>
    <string name="download_file">下載照片</string>
    <string name="upload_file">上傳照片</string>
    <string name="load_img_fail">讀取圖片失敗</string>
    <string name="plz_pick_img">請選取照片</string>
    <string name="upload_success">上傳成功</string>
    <string name="download_success">下載成功</string>
    <string name="download_fail">下載失敗</string>
    <string name="delete_success">刪除成功</string>
    <string name="plz_upload_img">請先上傳照片</string>

</resources>
